# Focalors

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  README_en.md  comp_log.txt  plot_var.m
case/: CMakeLists.txt  H-shaped_pe_precision.cpp  H-shaped_pe_precision_single.cpp  backstep.cpp  backstep_3d.cpp  complex_3d_pe.cpp  complex_geometry_boundary_pe.cpp  concat.cpp  concat_ns_only.cpp  concat_pe_only.cpp  cross_ns_symmetric_vali.cpp  cross_ns_symmetric_vali_new.cpp  cross_shaped_channel_2d.cpp  cross_shaped_channel_2d.h  cross_shaped_channel_2d_mhd_nonnewton.cpp  cross_shaped_channel_2d_nonnewton.cpp  cross_shaped_pe_precision.cpp  cross_shaped_pe_precision_reform.cpp  cross_shaped_pe_precision_strange_h_and_L2.cpp  five_domain_pe_precision.cpp  mpi_concat_demo.cpp  mpi_distributed_test.cpp  nine_domain_pe_precision.cpp  parallel_plate_channel_2d_velocity.cpp  pe_test.cpp  seven_domain_pe_precision.cpp  single_3d_pe.cpp  single_3d_pe_test.cpp
ibm/: ib_kernel.hpp  ib_particles_2d.cpp  ib_particles_2d.h  ib_particles_3d.cpp  ib_particles_3d.h  ib_scalar_solver_2d_Uhlmann.h  ib_scalar_solver_3d_Uhlmann.h  ib_solver_2d.cpp  ib_solver_2d.h  ib_solver_3d.cpp  ib_solver_3d.h  ib_solver_scalar_2d.cpp  ib_solver_scalar_2d.h  ib_solver_scalar_3d.cpp  ib_solver_scalar_3d.h  ib_velocity_solver_2d_Uhlmann.h  ib_velocity_solver_3d_Uhlmann.cpp  ib_velocity_solver_3d_Uhlmann.h  particles_2d_base.cpp  particles_2d_base.h  particles_3d_base.cpp  particles_3d_base.h  particles_base.h  particles_coordinate_2d.cpp  particles_coordinate_2d.h  particles_coordinate_3d.cpp  particles_coordinate_3d.h  particles_coordinate_map_2d.cpp  particles_coordinate_map_2d.h  particles_coordinate_map_3d.cpp  particles_coordinate_map_3d.h  particles_ib_2d.cpp  particles_ib_2d.h  particles_ib_3d.cpp  particles_ib_3d.h  particles_ib_scalar.cpp  particles_ib_scalar.h  particles_macro.h  particles_spawner.cpp  particles_spawner.h
ibm_MirrorPoint/: ib_solver_2d_mirror_point.cpp  ib_solver_2d_mirror_point.h  ib_solver_3d_mirror_point.cpp  ib_solver_3d_mirror_point.h  shape2d.h  shape3d.h  velocity_fixer_2d.cpp  velocity_fixer_2d.h  velocity_fixer_3d.cpp  velocity_fixer_3d.h
ibm_Uhlmann/: ib_scalar_solver_2d_Uhlmann.cpp  ib_scalar_solver_2d_Uhlmann.h  ib_scalar_solver_3d_Uhlmann.cpp  ib_scalar_solver_3d_Uhlmann.h  ib_velocity_solver_2d_Uhlmann.cpp  ib_velocity_solver_2d_Uhlmann.h  ib_velocity_solver_3d_Uhlmann.cpp  ib_velocity_solver_3d_Uhlmann.h  particles_ib_2d.h  particles_ib_3d.h  particles_ib_scalar.h
io/: assert.h  case_base.hpp  csv_handler.h  csv_writer_2d.cpp  csv_writer_2d.h  csv_writer_3d.cpp  paras_record.hpp  savepoint_3d.cpp  savepoint_3d.h  stat.cpp  stat.h  string_utils.hpp  vtk_writer.cpp  vtk_writer.h
ns/: boundary_2d_utils.cpp  boundary_2d_utils.h  boundary_3d_utils.cpp  boundary_3d_utils.h  mhd_module_2d.cpp  mhd_module_2d.h  mhd_module_2d_mac.cpp  mhd_module_2d_mac.h  ns_solver2d.h  (+24 more)
(+80 files in other folders)
